[gd_scene load_steps=16 format=3 uid="uid://gx6fkd0atvu6"]

[ext_resource type="Texture2D" uid="uid://c5sf54elkx0gs" path="res://Sprites/bg/back.png" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://brpjmavbokdx0" path="res://Font/upheavtt.ttf" id="1_28flt"]
[ext_resource type="Script" uid="uid://cq5oug4jygvp5" path="res://Scenes/main_menu.gd" id="1_ce3w2"]
[ext_resource type="Texture2D" uid="uid://rmapconnqfff" path="res://Sprites/enemy/world3/boss3.png" id="3_16hvj"]
[ext_resource type="FontFile" uid="uid://dmsnuc80euccg" path="res://Font/Strange Dreams.ttf" id="3_ce3w2"]
[ext_resource type="Texture2D" uid="uid://vqhvfph6pq72" path="res://Sprites/enemy/world2/boss2.png" id="4_vr1f0"]
[ext_resource type="AudioStream" uid="uid://c3ycmhya8yl2k" path="res://Sound_Eff/button_press.wav" id="5_n45e2"]
[ext_resource type="Texture2D" uid="uid://c5vk0t2f3q34o" path="res://Sprites/enemy/world1/boss1.png" id="5_t1dhk"]
[ext_resource type="AudioStream" uid="uid://cqvow86n5f7jl" path="res://Music/main_menu.ogg" id="6_opfnp"]
[ext_resource type="Texture2D" uid="uid://bp14cfjf42ebn" path="res://Sprites/enemy/world3/disciple.png" id="10_16hvj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n45e2"]
texture = ExtResource("1_1ehe0")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ehe0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
bg_color = Color(0, 0, 0, 0.698039)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.0962048, 0.0962047, 0.0962048, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce3w2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n45e2")

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(1087, 582)
scale = Vector2(1.55469, 1.55469)
texture = ExtResource("3_16hvj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -73.5
offset_right = 160.0
offset_bottom = 223.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(563, -13.5)
scale = Vector2(1.84375, 1.84375)
texture = ExtResource("4_vr1f0")

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(-295, 262.5)
scale = Vector2(2.45313, 2.45313)
texture = ExtResource("5_t1dhk")

[node name="play_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0.807843, 0.890196, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(0.988235, 0.713726, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.807843, 0.890196, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_48xlc")
text = "Play"

[node name="tutorial_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0.807843, 0.890196, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(0.988235, 0.713726, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.807843, 0.890196, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_48xlc")
text = "Quick tutorial"

[node name="story_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.988235, 0.713726, 0, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_48xlc")
text = "Story"

[node name="quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.788235, 0.34902, 0, 1)
theme_override_colors/font_color = Color(0.988235, 0.713726, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_48xlc")
text = "quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 45.0
offset_right = 84.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.639216, 0, 0, 1)
theme_override_constants/shadow_offset_y = -10
theme_override_fonts/font = ExtResource("3_ce3w2")
theme_override_font_sizes/font_size = 80
text = "Parasitic Ambition"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_pressed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_n45e2")

[node name="main_menu_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_opfnp")
autoplay = true
parameters/looping = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(210, 286)
scale = Vector2(3.95196, 3.95196)
texture = ExtResource("10_16hvj")
hframes = 5
vframes = 3

[connection signal="pressed" from="VBoxContainer/play_button" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/tutorial_button" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/story_button" to="." method="_on_story_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_pressed"]
